--- a/activity-4/index.html
+++ b/activity-4/index.html
@@ -9,6 +9,7 @@
     <body>
         <header>
             <h1>Product Reviews</h1>
+            <h2 id="greeting"></h2>
         </header>
         <main>
             <figure>
@@ -21,6 +22,8 @@
                 The Logitech - G Pro is a gaming keyboard that will surely change the way you play video games!
                 It's durable, long lasting, and has customizable glow in the dark colors and special keys that normal keyboards don't offer.
             </p>
+            <p>Price: $<span id="price"></span></p>
+            <p>Student Price: $<span id="student-price"></span></p>
 
             <h2>User Reviews</h2>
             <div class="review">
@@ -31,9 +34,30 @@
                 <h3>Max J.</h3>
                 <p>Waste of money and over hyped! Razer has wayyyy better keyboards than this garbage and comes with better features! </p>
             </div>
+            <div class="review">
+                <h3>Montell J.</h3>
+                <p>This keyboard rocks! Cool glow in the dark colors and very comfortable to type on!</p>
+            </div>
+            <div class="review">
+                <h3>Alan P.</h3>
+                <p>I really like the keyboard's features especially its gaming colors but I really wished it could've offered more keys. I'd give this a try but there's better options!</p>
+            </div>
+            <div class="review">
+                <h3>Lee S.</h3>
+                <p>Waste of money</p>
+            </div>
+            <div class="review">
+                <h3>Jaden H.</h3>
+                <p>I'm really glad logitech decided to add a student discount for this keyboard! Would highly recommend it for students who need new keyboards!</p>
+            </div>
+            <div class="review">
+                <h3>Aiden L.</h3>
+                <p>Ehhhh, for a student discount they should've lowered the price more. I'm a broke college student and 60 bucks was a little too much for a simple keyboard in my opinion</p>
+            </div>
         </main>
         <footer>
 
         </footer>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
